Import of FLORA/Linux-Sysfs-0.02 from CPAN.
gitpan-cpan-distribution: Linux-Sysfs
gitpan-cpan-version:      0.02
gitpan-cpan-path:         FLORA/Linux-Sysfs-0.02.tar.gz
gitpan-cpan-author:       FLORA
gitpan-cpan-maturity:     released

--- a/README
+++ b/README
@@ -10,6 +10,11 @@ To install this module, run the following commands:
     make install
 
 
+To get some debugging information during the test run do:
+
+    make test TEST_DEBUG=1
+
+
 SUPPORT AND DOCUMENTATION
 
 After installing, you can find documentation for this module with the perldoc command.
