--- a/Changes
+++ b/Changes
@@ -1,5 +1,8 @@
 Revision history for Linux-Sysfs
 
-0.01    Thu, 31 Aug 2006 15:35:06 +0200
-        First version, released on an unsuspecting world.
+0.02	Fri, 01 Sep 2006 20:18:42 +0200
+		- Refactored large parts of the test suite
+		- Fixed some minor XS issues
 
+0.01    Thu, 31 Aug 2006 15:35:06 +0200
+        - First version, released on an unsuspecting world.
