--- a/lib/Linux/Sysfs/Bus.pod
+++ b/lib/Linux/Sysfs/Bus.pod
@@ -19,7 +19,9 @@ The library provides functions for viewing buses represented in sysfs.
 
 =head1 METHODS
 
-=head2 open
+=over
+
+=item B<open>
 
 	my $bus = Linux::Sysfs::Bus->open($name);
 
@@ -27,52 +29,54 @@ Opens up one of the buses represented in sysfs in the /sys/bus directory.
 C<$name> is the name of the bus to open (e.g. "pci"). It returns a
 Linux::Sysfs::Bus instance on success or undef on failure.
 
-=head2 close
+=item B<close>
 
 	$bus->close;
 
 Closes up the sysfs_bus structure including its devices, and drivers and the
 list of attributes.
 
-=head2 get_devices
+=item B<get_devices>
 
 	my @devices = $bus->get_devices;
 
 Returns a list of Linux::Sysfs::Device instances that are registered with this
 bus.
 
-=head2 get_drivers
+=item B<get_drivers>
 
 	my @drivers = $bus->get_drivers;
 
 Returns a list of Linux::Sysfs::Driver instances that are registered with this
 bus.
 
-=head2 get_device
+=item B<get_device>
 
 	my $device = $bus->get_device($id);
 
 Looks for a device with the given C<$id> on this bus. On success, it returns a
 Linux::Sysfs::Device instance, otherwise undef.
 
-=head2 get_driver
+=item B<get_driver>
 
 	my $driver = $bus->get_driver($name);
 
 Looks for a driver with the given C<$name> on this bus. On success, it returns
 a Linux::Sysfs::Driver instance, otherwise undef.
 
-=head2 name
+=item B<name>
 
 	my $name = $bus->name;
 
 Returns the bus' name.
 
-=head2 path
+=item B<path>
 
 	my $path = $attr->path;
 
 Returns the full path to the bus' file in sysfs.
+
+=back
 
 =head1 AUTHOR
 
