--- a/lib/Linux/Sysfs/Class.pod
+++ b/lib/Linux/Sysfs/Class.pod
@@ -16,7 +16,9 @@ Libsysfs provides functions to open sysfs classes.
 
 =head1 METHODS
 
-=head2 open
+=over
+
+=item B<open>
 
     my $class = Linux::Sysfs::Class->open($name);
 
@@ -24,36 +26,38 @@ Opens up one the class represented by C<$name> in sysfs in the /sys/class
 directory.  On success, it returns a Linux::Sysfs::Class instance, otherwise
 undef.
 
-=head2 close
+=item B<close>
 
     $class->close;
 
 Closes up the Linux::Sysfs::Class instance including its class devices.
 
-=head2 get_device
+=item B<get_device>
 
     my $classdev = $class->get_device($name);
 
 Looks for a device with C<$name> in this class. Returns a
 Linux::Sysfs::ClassDevice on success or undef on failure.
 
-=head2 get_devices
+=item B<get_devices>
 
     my @classdevs = $class->get_devices;
 
 Returns a list of Linux::Sysfs::ClassDevice instances for the given class.
 
-=head2 name
+=item B<name>
 
     my $name = $class->name;
 
 Returns the class' name.
 
-=head2 path
+=item B<path>
 
     my $path = $class->path;
 
 Returns the full path to the class in sysfs.
+
+=back
 
 =head1 AUTHOR
 
